# smartsheet-integration

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  compose.dev.yml  dev.env
docker/django/: Dockerfile  entrypoint
scripts/: deploy.sh
src/: manage.py  pyproject.toml
src/accounts/: admin.py  forms.py  models.py  urls.py
src/accounts/api/: router.py  serializers.py  tests.py  views.py
src/accounts/migrations/: 0003_user_smartsheet_token.py  0004_remove_user_is_verified.py
src/accounts/tests/: test_models.py
src/checklist/: __init__.py
src/checklist/application/: use_cases.py
src/checklist/domain/: interfaces.py  models.py  services.py  types.py
src/checklist/infrastructure/: apps.py  gateways.py  serializers.py  urls.py  views.py
src/checklist/infrastructure/migrations/: 0001_initial.py
src/config/: urls.py
src/config/settings/: base.py
src/core/: crypto.py  exception_handler.py  fields.py  urls.py
src/frontend/: package-lock.json  package.json  vite.config.js
src/frontend/src/: App.jsx  api.js  index.jsx
src/frontend/src/components/: ChecklistItem.jsx
src/frontend/src/context/: AuthContext.jsx
src/frontend/src/pages/: Checklist.jsx  Login.jsx  Register.jsx  Sheets.jsx
src/frontend/templates/frontend/: index.html
src/frontend/templatetags/: vite_tags.py
